httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: placeholder
  annotations:
    apps.tanzu.vmware.com/promote-group: ""
    apps.tanzu.vmware.com/promotable: ""
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: main
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: placeholder
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
